--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/arnaud/paul/Battleship.java=UTF-8
+encoding//src/arnaud/paul/Computer.java=UTF-8
+encoding//src/arnaud/paul/Config.java=UTF-8
+encoding//src/arnaud/paul/Game.java=UTF-8
+encoding//src/arnaud/paul/Player.java=UTF-8
+encoding//src/arnaud/paul/Ship.java=UTF-8
